--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+html, 
+body {
+    height: 100%;
+}
+body {
+    background-image: url("./assets/background-phone.jpg");
+    background-color: #cccccc;
+    background-size:cover
+   }
+
+.block{
+    width: 100% !important;
+}
+
+.mat-form-field-appearance-legacy .mat-form-field-label{
+    color: white !important;
+  }
+
+  input{
+    color: white !important;
+  }
