cambios visuales, validaciones

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
 <div class="container-fluid">
     <app-register></app-register>
 </div>
+<ng-flash-message></ng-flash-message>
 <router-outlet></router-outlet>
