--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -21,4 +21,4 @@
     </div>
   </div>
 
-  <button mat-raised-button class="block" (click)="userSubscription()">Inscribirse</button>
+  <button mat-raised-button class="block" (click)="userSubscription()" [disabled]="validateFields()">Inscribirse</button>
