se agrega loading

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -21,4 +21,8 @@
     </div>
   </div>
 
-  <button mat-raised-button class="block" (click)="userSubscription()" [disabled]="validateFields()">Inscribirse</button>
+  <button mat-raised-button class="block" (click)="userSubscription()" [disabled]="validateFields()">
+    Inscribirse
+    <i class="fas fa-spinner fa-spin" *ngIf="loading"></i>
+
+  </button>
